<resources>
    <string name="app_name">程序降温仪</string>
    <string name="ok_string">确定</string>
    <string name="cancel_string">取消</string>
    <string name="notice_app_exit">再按一次退出程序</string>
    <string name="ble_disconnected">断开连接</string>
    <string name="ble_connected">已连接</string>
    <string name="settings">设置</string>
    <string name="exit_app">退出应用</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="apply">应用</string>
    <string name="preview">预览</string>
    <string name="index">序号</string>
    <string name="title_index">序号</string>
    <string name="title_speed">速率[℃/分]</string>
    <string name="title_keep">恒温[℃]</string>
    <string name="title_time">时间[分钟]</string>
    <string name="setting_chart_description">单位: 分钟</string>
    <string name="temperature_unit">温度: ℃</string>
    <string name="sample_temperature_unit">样品温度: ℃</string>
    <string name="caculate_temperature_unit">计算温度: ℃</string>
    <string name="delete">删除</string>
    <string name="sure_to_delete">确定删除?</string>
    <string name="sure_to_exit">确定退出?</string>
    <string name="name">名称</string>
    <string name="open">打开</string>
    <string name="stage">阶段</string>
    <string name="speed">速度</string>
    <string name="target_temperature">温度</string>
    <string name="keep_time">时间</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="internal_temperature">箱内温度</string>
    <string name="external_temperature">外部温度</string>
    <string name="sample_temperature">样品温度</string>
    <string name="internal_temperature_sample">箱内温度: --.-℃</string>
    <string name="external_temperature_sample">外部温度: --.-℃</string>
    <string name="sample_temperature_sample">样品温度: --.-℃</string>
    <string name="sample_temperature_title">样品温度:</string>
    <string name="temp_unit">℃</string>
    <string name="ssr1">电磁阀1:</string>
    <string name="ssr2">电磁阀2:</string>
    <string name="heater">电热丝:</string>
    <string name="main_no_data_text">点击开始</string>
    <!--notice-->
    <string name="notice_input_invalid">输入无效</string>
    <string name="notice_data_null">设置为空</string>
    <string name="notice_open_null">没有保存记录</string>
    <string name="notice_delete_done">删除成功</string>
    <string name="notice_save_done">保存成功</string>
    <string name="notice_apply_done">已应用为当前设置</string>
    <string name="connecting_wait">连接中，请稍后...</string>
    <string name="connect_success">连接成功</string>
    <string name="notice_disconnect">未连接到设备</string>
    <string name="notice_setting_null">请先设置参数</string>
</resources>
