<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_top"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/toolbar_color"
            app:contentInsetStart="0.0dp"
            app:theme="@style/ToolbarStyle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_ble_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/settings"
                    android:textColor="@color/title_text"
                    android:textSize="@dimen/title_text_size" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/layout_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/title_index"
                        android:textColor="@color/content_text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/title_speed"
                        android:textColor="@color/content_text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/title_keep"
                        android:textColor="@color/content_text" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/title_time"
                        android:textColor="@color/content_text" />
                </LinearLayout>

                <View
                    android:id="@+id/divide_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/layout_titles"
                    android:background="@color/color_divide_line" />

                <LinearLayout
                    android:id="@+id/layout_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_add"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:minHeight="@dimen/button_min_height"
                        android:text="@string/add"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/bt_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:minHeight="@dimen/button_min_height"
                        android:text="@string/save"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/bt_apply"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:minHeight="@dimen/button_min_height"
                        android:text="@string/apply"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:id="@+id/bt_preview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/button_margin"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:minHeight="@dimen/button_min_height"
                        android:text="@string/preview"
                        android:textColor="@color/button_text_color" />
                </LinearLayout>

                <ListView
                    android:id="@+id/lv_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/layout_buttons"
                    android:layout_below="@id/divide_line"></ListView>
            </RelativeLayout>
            <!--chart view-->
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_setting_preview"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
