<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/dialog_margin_left"
    android:layout_marginRight="@dimen/dialog_margin_right"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_right"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/content_text"
            android:textSize="@dimen/dialog_textsize"
            android:layout_marginRight="@dimen/dialog_margin"
            android:text="@string/title_speed"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/dialog_et_speed"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_right"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/content_text"
            android:textSize="@dimen/dialog_textsize"
            android:layout_marginRight="@dimen/dialog_margin"
            android:text="@string/title_keep"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/dialog_et_keep"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:digits="0123456789-."
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_margin_left"
        android:layout_marginRight="@dimen/dialog_margin_right"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/content_text"
            android:textSize="@dimen/dialog_textsize"
            android:layout_marginRight="@dimen/dialog_margin"
            android:text="@string/title_time"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/dialog_et_time"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>